--- a/templates/sheets/magia-sheet.hbs
+++ b/templates/sheets/magia-sheet.hbs
@@ -6,7 +6,7 @@
                     <img class="tagmarLogo" src="systems/tagmar_rpg/templates/sheets/img/logo.png"/>  
                 </div>
                 <div class="col-md-8">
-                    <h1 class="fairyDust" style="text-align: center; padding-top:20px;">{{item.type}}</h1>
+                    <h1 class="fairyDust" style="text-align: center; padding-top:20px;">Magia / Técnica</h1>
                 </div>
             </div>
             <div class="row container_dados">
@@ -39,7 +39,7 @@
             </div>
             <div class="row dados"> 
                 <div class="col-md-4">
-                    <label><h4 class="mediaeval">Karma Adicional:</h4></label>
+                    <label><h4 class="mediaeval">Karma ou Fadiga Adicional:</h4></label>
                 </div>
                 <div class="col-md-2">
                     <input name="system.total.valorKarma" type="number" value="{{data.system.total.valorKarma}}" height="30"/>
