--- a/templates/sheets/personagem-sheet.hbs
+++ b/templates/sheets/personagem-sheet.hbs
@@ -873,7 +873,7 @@
                             {{#idfind document.system.combos "Magias"}}
                             <tr style="text-align: left;">
                                 <th width="50px"></th>
-                                <th class="mediaeval"><a class="showImg" data-item-id="Magias">Magia</a></th>
+                                <th class="mediaeval"><a class="showImg" data-item-id="Magias">Magia/Técnica</a></th>
                                 <th class="mediaeval">Nível</th>
                                 <th class="mediaeval">Total</th>
                                 <th class="mediaeval">Editar</th>
@@ -901,7 +901,7 @@
                             {{/idfind}}
                             {{#ifind document.system.combos "Magias"}}
                             <tr style="text-align: left;">
-                                <th class="mediaeval"><a class="showImg" data-item-id="Magias">Magia</a></th>
+                                <th class="mediaeval"><a class="showImg" data-item-id="Magias">Magia/Técnica</a></th>
                                 <th class="mediaeval">Nível</th>
                                 <th class="mediaeval">Total</th>
                                 <th class="mediaeval">Editar</th>
@@ -1240,58 +1240,7 @@
                         <table>
                             <tr style="text-align: left;">
                                 <th width="50px"></th>
-                                <th class="mediaeval">Técnica de Combate</th>
-                                <th class="mediaeval">Total</th>
-                                <th class="mediaeval">Categoria</th>
-                                <th class="mediaeval">Editar</th>
-                            </tr>
-                            {{#each actor.tecnica_fav as |tecnica|}}
-                            <tr class="item" data-item-id="{{tecnica.id}}">
-                                <td class="mediaeval">
-                                    <a class="rollable dragable" data-item-id="{{tecnica.id}}" title="Clique para rolar.">
-                                        <img class="imgItem" src="{{tecnica.img}}"/>
-                                    </a>
-                                </td>
-                                <td class="mediaeval combateName"><a class="rollable dragable" data-item-id="{{tecnica.id}}" title="Clique para rolar ou arraste para sua barra de macros.">{{tecnica.name}}</a></td>
-                                <td class="mediaeval">{{tecnica.system.total}}</td>
-                                {{#ifeq tecnica.system.categoria "Perícia"}}
-                                    <td class="mediaeval">{{tecnica.system.categoria}}</td>
-                                {{/ifeq}}
-                                {{#ifeq tecnica.system.categoria "Postura"}}
-                                    <td class="mediaeval">{{tecnica.system.categoria}}<i class="far fa-hand-paper" style='margin-left:5px;'></i></td>
-                                {{/ifeq}}
-                                {{#ifeq tecnica.system.categoria "Ataque"}}
-                                    <td class="mediaeval">{{tecnica.system.categoria}}<i class="fas fa-gavel" style='margin-left:5px;'></i></td>
-                                {{/ifeq}}
-                                {{#ifeq tecnica.system.categoria "Precisão"}}
-                                    <td class="mediaeval">{{tecnica.system.categoria}}<i class="fas fa-bullseye" style='margin-left:5px;'></i></td>
-                                {{/ifeq}}
-                                {{#ifeq tecnica.system.categoria "Agressão"}}
-                                    <td class="mediaeval">{{tecnica.system.categoria}}<i class="fas fa-skull-crossbones" style='margin-left:5px;'></i></td>
-                                {{/ifeq}}
-                                {{#ifeq tecnica.system.categoria "Proteção"}}
-                                    <td class="mediaeval">{{tecnica.system.categoria}}<i class="fas fa-shield-alt" style='margin-left:5px;'></i></td>
-                                {{/ifeq}}
-                                {{#ifeq tecnica.system.categoria "Suporte"}}
-                                    <td class="mediaeval">{{tecnica.system.categoria}}<i class="fas fa-chess-rook" style='margin-left:5px;'></i></td>
-                                {{/ifeq}}
-                                <td>
-                                    <div class="item-controls">
-                                        <a class="item-control item-edit" title="Editar"><i class="fas fa-edit"></i></a>
-                                        <!--a class="item-control item-delete" title="Deletar"><i class="fas fa-trash"></i></a-->
-                                    </div>
-                                </td>
-                            </tr>
-                            {{/each}}
-                        </table>
-                    </div>
-                </div>
-                <div class="row dados">
-                    <div class="col-12">
-                        <table>
-                            <tr style="text-align: left;">
-                                <th width="50px"></th>
-                                <th class="mediaeval">Magia</th>
+                                <th class="mediaeval">Magia/Técnica</th>
                                 <th class="mediaeval">Nível</th>
                                 <th class="mediaeval">Total</th>
                                 <th class="mediaeval">Editar</th>
