equip.defesa.novo.estagio

--- a/templates/sheetsPoints/personagem-sheet.hbs
+++ b/templates/sheetsPoints/personagem-sheet.hbs
@@ -21,7 +21,7 @@
                     <label><h1 class="fairyDust" style="padding-top: 15px;">Estágio:</h1></label>
                 </div>
                 <div class="col-md-2 col-8">
-                    <h1 class="fairyDust"><input class="ipEstagio" name="system.estagio" type="number" value="{{data.system.estagio}}" style="text-align: center";/></h1>
+                    <h1 class="fairyDust"><input disabled class="ipEstagio" name="system.estagio" type="number" value="{{data.system.estagio}}" style="text-align: center";/></h1>
                 </div>  
             </div>
         </div>
@@ -295,28 +295,14 @@
                                 </table>
                             </div>
                             <div class="col-md-2">
-                                {{#ifgr data.system.estagio 1}}
+                                {{#ifge data.system.pontos_estagio.value data.system.pontos_estagio.next}}
                                 <table class='table_novaEH'>
-                                    <caption class="mediaeval">Nova EH</caption>
-                                    <tr style="text-align: center;height:35px;">
-                                        <th class="mediaeval"><a title="Clique para rolar 1d10." class="roll1d10" style="margin-right: 10px;"><i class="fas fa-dice-d20"></i></a><a class="calculaNovaEH" title="Calcular EH"><i class="fas fa-calculator"></i></a></th>
-                                    </tr>
-                                    <tr style="text-align: center;">
-                                        <td><input title="Valor sorteado." class="valord10EH" name="system.valor_dado_eh" value="{{data.system.valor_dado_eh}}" type="number"/></td>
+                                    <caption class="mediaeval">Subir Nível</caption>
+                                    <tr style="text-align: center;height:66px;">
+                                        <th class="mediaeval"><a class="subir_estagio" title="Subir Estágio"><i class="fas fa-arrow-up fa-2x"></i></a></th>
                                     </tr>
                                 </table>
-                                {{/ifgr}}
-                                {{#ifle data.system.estagio 1}}
-                                <table class='table_novaEH hiddenT'>
-                                    <caption class="mediaeval">Nova EH</caption>
-                                    <tr style="text-align: center;">
-                                        <th class="mediaeval"><a title="Clique para rolar 1d10." class="roll1d10" style="margin-right: 10px;"><i class="fas fa-dice-d20"></i></a> <a class="calculaNovaEH" title="Calcular EH"><i class="fas fa-calculator"></i></a></th>
-                                    </tr>
-                                    <tr style="text-align: center;">
-                                        <td><input title="Valor sorteado." class="valord10EH" name="system.valor_dado_eh" value="{{data.system.valor_dado_eh}}" type="number"/></td>
-                                    </tr>
-                                </table>
-                                {{/ifle}}
+                                {{/ifge}}
                             </div>
                             <div class="col-md-3">
                                 <table>
@@ -787,6 +773,12 @@
                                 <td class="mediaeval">{{defesa.system.absorcao}}</td>
                                 <td>
                                     <div class="item-controls">
+                                        {{#ifeq defesa.system.equipado true}}
+                                        <a class="item-control item-equipa" title="Equipar"><i class="fas fa-check-circle"></i></a>
+                                        {{/ifeq}}
+                                        {{#ifeq defesa.system.equipado false}}
+                                        <a class="item-control item-equipa" title="Equipar"><i class="far fa-circle"></i></a>
+                                        {{/ifeq}}
                                         <a class="item-control item-edit" title="Editar"><i class="fas fa-edit"></i></a>
                                         <a class="item-control item-delete" title="Deletar"><i class="fas fa-trash"></i></a>
                                     </div>
@@ -808,6 +800,12 @@
                                 <td class="mediaeval">{{defesa.system.absorcao}}</td>
                                 <td>
                                     <div class="item-controls">
+                                        {{#ifeq defesa.system.equipado true}}
+                                        <a class="item-control item-equipa" title="Equipar"><i class="fas fa-check-circle"></i></a>
+                                        {{/ifeq}}
+                                        {{#ifeq defesa.system.equipado false}}
+                                        <a class="item-control item-equipa" title="Equipar"><i class="far fa-circle"></i></a>
+                                        {{/ifeq}}
                                         <a class="item-control item-edit" title="Editar"><i class="fas fa-edit"></i></a>
                                         <a class="item-control item-delete" title="Deletar"><i class="fas fa-trash"></i></a>
                                     </div>
