--- a/templates/sheetsPoints/personagem-sheet.hbs
+++ b/templates/sheetsPoints/personagem-sheet.hbs
@@ -21,7 +21,7 @@
                     <label><h1 class="fairyDust" style="padding-top: 15px;">Estágio:</h1></label>
                 </div>
                 <div class="col-md-2 col-8">
-                    <h1 class="fairyDust"><input disabled class="ipEstagio" name="system.estagio" type="number" value="{{data.system.estagio}}" style="text-align: center";/></h1>
+                    <h1 class="fairyDust"><input class="ipEstagio" name="system.estagio" type="number" value="{{data.system.estagio}}" style="text-align: center";/></h1>
                 </div>  
             </div>
         </div>
